# nvvidconv-plugin-wrapper

./: .gitignore  CMakeLists.txt  LICENSE  README.md  nvvidconv_plugin_wrapper.c
